# multiqueue

./: CMakeLists.txt  README.md
include/: broker.h  broker_exception.h  consumer.h  exception.h  logger.h  partition_manager.h  partitionmanager.h
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  tests.cpp
